--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
     "serve": "^14.0.1",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "^3.1.8",
     "terser-webpack-plugin": "^5.3.6",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
