--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "isolatedModules": true,
     "esModuleInterop": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "path": {
+    "@components/*": "./src/components"
+  }
 }
