--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "sweetalert2": "^11.4.33"
   }
 }
