--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "sweetalert2": "^11.4.33"
   }
 }
