--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
-    "sweetalert2": "^11.4.33"
+    "sweetalert2": "^11.4.33",
+    "uuid": "^9.0.0"
   }
 }
